--- a/stockfish/debian/changelog
+++ b/stockfish/debian/changelog
@@ -2,4 +2,4 @@ stockfish (15-0) unstable; urgency=medium
 
   * Package Stockfish 15.
 
- -- Niklas Fiekas <niklas@lichess.org>  Fri, 27 Mai 2022 09:16:10 +0200
+ -- Niklas Fiekas <niklas@lichess.org>  Fri, 27 May 2022 09:16:10 +0200
